fix: add z-index 1 to header__user-menu

--- a/style.css
+++ b/style.css
@@ -194,6 +194,7 @@ a {
     border-top-right-radius: 0;
     padding: 7.5px 2.5px;
     width: max-content;
+    z-index: 1;
 }
 
 .header__user-list {
